--- a/src/app/admin/questions/questions.component.html
+++ b/src/app/admin/questions/questions.component.html
@@ -1,5 +1,5 @@
 <section class="bg-gray-50 flex justify-around">
-    <div class="flex flex-col items-center justify-center py-8 w-[35%] ml-5">
+    <div class="flex flex-col items-center py-8 w-[35%] ml-5">
         <a class="flex items-center mb-6 text-2xl font-semibold text-gray-900">
             <img class="w-8 h-8 mr-2" src="/assets/dice.jpg" alt="logo">
             Techopoly    
