--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
                 <div class="flex flex-col items-center">
                     <img *ngIf="wall_of_fame[0] else first" class="inline-block object-cover w-20 h-20 rounded-full border-[#ffd700] border-[5px]" [src]="wall_of_fame[0]" />
                     <ng-template #first>
-                        <img class="inline-block object-cover w-20 h-20 rounded-full border-[#ffd700] border-[5px]" src="/assets/none.jpg">
+                        <img class="inline-block object-cover w-20 h-20 rounded-full border-[#ffd700] border-[5px]" src="/assets/none.png">
                     </ng-template>
                     <span class="text-lg mt-1 text-[#ffd700]">#1</span>
                 </div>
@@ -26,7 +26,7 @@
                 <div class="flex -space-x-4 items-center">
                     <img *ngIf="wall_of_fame[3] else second" class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" [src]="wall_of_fame[3]"/>
                     <ng-template #second>
-                        <img class="inline-block object-cover w-16 h-16 rounded-full border-[#ffd700] border-[5px]" src="/assets/none.jpg">
+                        <img class="inline-block object-cover w-16 h-16 rounded-full border-[#ffd700] border-[5px]" src="/assets/none.png">
                     </ng-template>
                     <img *ngIf="wall_of_fame[4] else second" class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" [src]="wall_of_fame[4]"/>
                     <img *ngIf="wall_of_fame[5] else second" class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" [src]="wall_of_fame[5]"/>
@@ -57,71 +57,71 @@
         <div id="1" class="flex">
             <div id="10000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[10]"></div>
-                <img class="w-full h-full" src="/assets/box_img/10.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/10.png" alt="">
             </div>
             <div id="11000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[11]"></div>
-                <img class="w-full h-full" src="/assets/tax.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/11.png" alt="">
             </div>
             <div id="12000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[12]"></div>
-                <img class="w-full h-full" src="/assets/box_img/12.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/12.png" alt="">
             </div>
             <div id="13000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[13]"></div>
-                <img class="w-full h-full" src="/assets/box_img/13.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/tax.png" alt="">
             </div>
             <div id="14000" class="cell bg-white">
                 <div [innerHTML]="list[14]"></div>
-                <img class="w-full h-full" src="/assets/box_img/14.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/14.png" alt="">
             </div>
             <div id="15000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[15]"></div>
-                <img class="w-full h-full" src="/assets/restaurant.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/15.png" alt="">
             </div>
             <div id="16000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[16]"></div>
-                <img class="w-full h-full" src="/assets/health.avif" alt="">
+                <img class="w-full h-full" src="/assets/box_img/16.png" alt="">
             </div>
             <div id="17000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[17]"></div>
-                <img class="w-full h-full" src="/assets/health.avif" alt="">
+                <img class="w-full h-full" src="/assets/box_img/treasure.png" alt="">
             </div>
             <div id="18000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[18]"></div>
-                <img class="w-full h-full" src="/assets/health.avif" alt="">
+                <img class="w-full h-full" src="/assets/box_img/18.png" alt="">
             </div>
             <div id="19000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[19]"></div>
-                <img class="w-full h-full" src="/assets/health.avif" alt="">
+                <img class="w-full h-full" src="/assets/box_img/19.png" alt="">
             </div>
             <div id="20000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[20]"></div>
-                <img class="w-full h-full" src="/assets/health.avif" alt="">
+                <img class="w-full h-full" src="/assets/box_img/20.png" alt="">
             </div>
             <div id="21000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[21]"></div>
-                <img class="w-full h-full" src="/assets/health.avif" alt="">
+                <img class="w-full h-full" src="/assets/box_img/21.png" alt="">
             </div>
             <div id="22000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[22]"></div>
-                <img class="w-full h-full" src="/assets/health.avif" alt="">
+                <img class="w-full h-full" src="/assets/box_img/4_Blackhole.png" alt="">
             </div>
             <div id="23000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[23]"></div>
-                <img class="w-full h-full" src="/assets/health.avif" alt="">
+                <img class="w-full h-full" src="/assets/box_img/23.png" alt="">
             </div>
             <div id="24000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[24]"></div>
-                <img class="w-full h-full" src="/assets/health.avif" alt="">
+                <img class="w-full h-full" src="/assets/box_img/24.png" alt="">
             </div>
             <div id="25000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[25]"></div>
-                <img class="w-full h-full" src="/assets/health.avif" alt="">
+                <img class="w-full h-full" src="/assets/box_img/25.png" alt="">
             </div>
             <div id="26000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[26]"></div>
-                <img class="w-full h-full" src="/assets/health.avif" alt="">
+                <img class="w-full h-full" src="/assets/box_img/service_charge.png" alt="">
             </div>
         </div>
 
@@ -129,12 +129,12 @@
         <div id="2" class="flex">
             <div id="9000" class="cell bg-white">
                 <div [innerHTML]="list[9]"></div>
-                <img class="p-2 w-full h-full" src="/assets/blackhole.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/4_Blackhole.png" alt="">
             </div>
             <div class="middle-empty-cell border-t-2"></div>
             <div id="27000" class="cell bg-lime-400">
                 <div [innerHTML]="list[27]"></div>
-                <img class="w-full h-full" src="/assets/housing.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/27.png" alt="">
             </div>
         </div>
 
@@ -142,12 +142,12 @@
         <div id="3" class="flex">
             <div id="8000" class="cell bg-slate-400">
                 <div [innerHTML]="list[8]"></div>
-                <img src="/assets/restaurant.jpg" alt="">
+                <img src="/assets/box_img/8.png" alt="">
             </div>
             <div class="middle-empty-cell"></div>
             <div id="28000" class="cell bg-lime-400">
                 <div [innerHTML]="list[28]"></div>
-                <img class="w-full h-full" src="/assets/treasure.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/4_Blackhole.png" alt="">
             </div>
         </div>
 
@@ -155,12 +155,12 @@
         <div id="4" class="flex justify-between">
             <div id="7000" class="cell bg-slate-400">
                 <div [innerHTML]="list[7]"></div>
-                <img class="w-full h-full" src="/assets/grocery.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/7.png" alt="">
             </div>
             <div class="middle-empty-cell"></div>
             <div id="29000" class="cell bg-lime-400">
                 <div [innerHTML]="list[29]"></div>
-                <img class="w-full h-full" src="/assets/fashion.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/treasure.png" alt="">
             </div>
         </div>
 
@@ -168,12 +168,12 @@
         <div id="5" class="flex">
             <div id="6000" class="cell bg-white">
                 <div [innerHTML]="list[6]"></div>
-                <img class="p-2 w-full h-full" src="/assets/blackhole.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/6.png" alt="">
             </div>
             <div class="middle-empty-cell"></div>
             <div id="30000" class="cell bg-lime-400">
                 <div [innerHTML]="list[30]"></div>
-                <img class="w-full h-full" src="/assets/housing.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/30.png" alt="">
             </div>
         </div>
 
@@ -181,17 +181,17 @@
         <div id="6" class="flex">
             <div id="5000" class="cell bg-white">
                 <div [innerHTML]="list[5]"></div>
-                <img class="p-2 w-full h-full" src="/assets/blackhole.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/5.png" alt="">
             </div>
             <div class="grow border-black border-x-2">
                 <!-- <a class="flex items-center justify-center h-full text-4xl font-semibold text-gray-900">
-                    <img class="w-8 h-8 mr-2" src="/assets/dice.jpg" alt="logo">
+                    <img class="w-8 h-8 mr-2" src="/assets/dice.png" alt="logo">
                     Techopoly    
                 </a> -->
             </div>
             <div id="31000" class="cell bg-lime-400">
                 <div [innerHTML]="list[31]"></div>
-                <img class="w-full h-full" src="/assets/housing.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/31.png" alt="">
             </div>
         </div>
 
@@ -199,12 +199,12 @@
         <div id="7" class="flex">
             <div id="4000" class="cell bg-white">
                 <div [innerHTML]="list[4]"></div>
-                <img class="p-2 w-full h-full" src="/assets/blackhole.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/4_Blackhole.png" alt="">
             </div>
             <div class="middle-empty-cell"></div>
             <div id="32000" class="cell bg-lime-400">
                 <div [innerHTML]="list[32]"></div>
-                <img class="w-full h-full" src="/assets/housing.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/32.png" alt="">
             </div>
         </div>
 
@@ -212,12 +212,12 @@
         <div id="8" class="flex">
             <div id="3000" class="cell bg-white">
                 <div [innerHTML]="list[3]"></div>
-                <img class="p-2 w-full h-full" src="/assets/blackhole.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/3.png" alt="">
             </div>
             <div class="middle-empty-cell"></div>
             <div id="33000" class="cell bg-lime-400">
                 <div [innerHTML]="list[33]"></div>
-                <img class="w-full h-full" src="/assets/housing.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/4_Blackhole.png" alt="">
             </div>
         </div>
 
@@ -225,12 +225,12 @@
         <div id="9" class="flex">
             <div id="2000" class="cell bg-white">
                 <div [innerHTML]="list[2]"></div>
-                <img class="p-2 w-full h-full" src="/assets/blackhole.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/2.png" alt="">
             </div>
             <div class="middle-empty-cell"></div>
             <div id="34000" class="cell bg-lime-400">
                 <div [innerHTML]="list[34]"></div>
-                <img class="w-full h-full" src="/assets/housing.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/34.png" alt="">
             </div>
         </div>
 
@@ -238,12 +238,12 @@
         <div id="10" class="flex">
             <div id="10000" class="cell bg-white">
                 <div [innerHTML]="list[1]"></div>
-                <img class="p-2 w-full h-full" src="/assets/blackhole.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/1.png" alt="">
             </div>
             <div class="middle-empty-cell"></div>
             <div id="35000" class="cell bg-lime-400">
                 <div [innerHTML]="list[35]"></div>
-                <img class="w-full h-full" src="/assets/housing.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/35.png" alt="">
             </div>
         </div>
         
@@ -256,63 +256,63 @@
             </div>
             <div id="51000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[51]"></div>
-                <img class="w-full h-full" src="/assets/theater.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/51.png" alt="">
             </div>
             <div id="50000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[50]"></div>
-                <img class="w-full h-full" src="/assets/electronics.jpg" alt="">
+                <img class="w-full h-full" src="/assets/box_img/50.png" alt="">
             </div>
             <div id="49000" class="cell bg-white">
                 <div [innerHTML]="list[49]"></div>
-                <img class="p-2 w-full h-full" src="/assets/blackhole.jpg" alt="">
+                <img class="p-2 w-full h-full" src="/assets/box_img/49.png" alt="">
             </div>
             <div id="48000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[48]"></div>
-                <img class="w-full h-full" src="/assets/office.avif" alt="">
+                <img class="w-full h-full" src="/assets/box_img/48.png" alt="">
             </div>
             <div id="47000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[47]"></div>
-                <img class="w-full h-full" src="/assets/meditation.avif" alt="">
+                <img class="w-full h-full" src="/assets/box_img/4_Blackhole.png" alt="">
             </div>
             <div id="46000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[46]"></div>
-                <img class="w-full h-full" src="/assets/jail.webp" alt="">
+                <img class="w-full h-full" src="/assets/box_img/46.png" alt="">
             </div>
             <div id="45000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[45]"></div>
-                <img class="w-full h-full" src="/assets/jail.webp" alt="">
+                <img class="w-full h-full" src="/assets/box_img/45.png" alt="">
             </div>
             <div id="44000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[44]"></div>
-                <img class="w-full h-full" src="/assets/jail.webp" alt="">
+                <img class="w-full h-full" src="/assets/box_img/44.png" alt="">
             </div>
             <div id="43000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[43]"></div>
-                <img class="w-full h-full" src="/assets/jail.webp" alt="">
+                <img class="w-full h-full" src="/assets/box_img/treasure.png" alt="">
             </div>
             <div id="42000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[42]"></div>
-                <img class="w-full h-full" src="/assets/jail.webp" alt="">
+                <img class="w-full h-full" src="/assets/box_img/42.png" alt="">
             </div>
             <div id="41000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[41]"></div>
-                <img class="w-full h-full" src="/assets/jail.webp" alt="">
+                <img class="w-full h-full" src="/assets/box_img/41.png" alt="">
             </div>
             <div id="40000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[40]"></div>
-                <img class="w-full h-full" src="/assets/jail.webp" alt="">
+                <img class="w-full h-full" src="/assets/box_img/4_Blackhole.png" alt="">
             </div>
             <div id="39000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[39]"></div>
-                <img class="w-full h-full" src="/assets/jail.webp" alt="">
+                <img class="w-full h-full" src="/assets/box_img/39.png" alt="">
             </div>
             <div id="38000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[38]"></div>
-                <img class="w-full h-full" src="/assets/jail.webp" alt="">
+                <img class="w-full h-full" src="/assets/box_img/38.png" alt="">
             </div>
             <div id="37000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[37]"></div>
-                <img class="w-full h-full" src="/assets/jail.webp" alt="">
+                <img class="w-full h-full" src="/assets/box_img/37.png" alt="">
             </div>
             <div id="36000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[36]"></div>
