updated the asset modal with image

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -142,7 +142,7 @@
         <div id="3" class="flex">
             <div id="8000" class="cell bg-slate-400">
                 <div [innerHTML]="list[8]"></div>
-                <img src="/assets/box_img/8.png" alt="">
+                <img class="w-full h-full" src="/assets/box_img/8.png" alt="">
             </div>
             <div class="middle-empty-cell"></div>
             <div id="28000" class="cell bg-lime-400">
@@ -570,7 +570,7 @@
 
                 <!-- HEADER SECTION WHICH CONTAINS TEAM ID AND DISPLAY PICTURE -->
                 <div class="flex items-center justify-center bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
-                    <img class="w-[5000px] h-[200px]" src="/assets/box_img/1.jpeg">
+                    <img class="w-[5000px] h-[200px]" src="/assets/box_img/{{current_box.box_index}}.png">
                     
                 </div>
 
