updated coding questions page for admin

--- a/src/app/admin/questions/questions.component.html
+++ b/src/app/admin/questions/questions.component.html
@@ -121,37 +121,37 @@
                         </td>
                         <td class="px-6 py-4">
                             <div class="flex items-center">
-                                <strong>{{ ques.test_case1 }}</strong>
+                                <strong class="cell-custom">{{ ques.test_case1 }}</strong>
                             </div>
                         </td>
                         <td class="px-6 py-4">
                             <div class="flex items-center">
-                                <strong>{{ ques.test_case2 }}</strong>
+                                <strong class="cell-custom">{{ ques.test_case2 }}</strong>
                             </div>
                         </td>
                         <td class="px-6 py-4">
                             <div class="flex items-center">
-                                <strong>{{ ques.test_case3 }}</strong>
+                                <strong class="cell-custom">{{ ques.test_case3 }}</strong>
                             </div>
                         </td>
                         <td class="px-6 py-4">
                             <div class="flex items-center">
-                                <strong>{{ ques.out1 }}</strong>
+                                <strong class="cell-custom">{{ ques.out1 }}</strong>
                             </div>
                         </td>
                         <td class="px-6 py-4">
                             <div class="flex items-center">
-                                <strong>{{ ques.out2 }}</strong>
+                                <strong class="cell-custom">{{ ques.out2 }}</strong>
                             </div>
                         </td>
                         <td class="px-6 py-4">
                             <div class="flex items-center">
-                                <strong>{{ ques.out3 }}</strong>
+                                <strong class="cell-custom">{{ ques.out3 }}</strong>
                             </div>
                         </td>
                         <td class="px-6 py-4">
                             <div class="flex items-center">
-                                <strong>{{ ques.level }}</strong>
+                                <strong class="cell-custom">{{ ques.level }}</strong>
                             </div>
                         </td>
                     </tr>
