--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -264,7 +264,7 @@
             </div>
             <div id="49000" class="cell bg-white">
                 <div [innerHTML]="list[49]"></div>
-                <img class="p-2 w-full h-full" src="/assets/box_img/49.png" alt="">
+                <img class="w-full h-full" src="/assets/box_img/49.png" alt="">
             </div>
             <div id="48000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[48]"></div>
