updated all popovers

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -69,7 +69,7 @@
             </div>
             <div id="13000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[13]"></div>
-                <img class="w-full h-full" src="/assets/box_img/tax.png" alt="">
+                <img class="w-full h-full" src="/assets/box_img/13.png" alt="">
             </div>
             <div id="14000" class="cell bg-white">
                 <div [innerHTML]="list[14]"></div>
@@ -121,7 +121,7 @@
             </div>
             <div id="26000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[26]"></div>
-                <img class="w-full h-full" src="/assets/box_img/service_charge.png" alt="">
+                <img class="w-full h-full" src="/assets/box_img/26.png" alt="">
             </div>
         </div>
 
@@ -316,7 +316,7 @@
             </div>
             <div id="36000" class="cell bg-yellow-400">
                 <div [innerHTML]="list[36]"></div>
-                <img class="w-full h-full" src="/assets/jail.webp" alt="">
+                <img class="w-full h-full" src="/assets/box_img/36.png" alt="">
             </div>
         </div>
     </div>
